tests/baselines/reference/constructSignatureWithAccessibilityModifiersOnParameters.errors.txt
==== tests/cases/compiler/constructSignatureWithAccessibilityModifiersOnParameters.ts (4 errors) ====
    // Parameter properties are only valid in constructor definitions, not even in other forms of construct signatures
    
    class C {
        constructor(public x, private y) { }
    }
    
    class C2 {
        constructor(public x) { }
    }
    
    class C3 {
        constructor(private x) { }
    }
    
    interface I {
        new (public x);
             ~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
    }
    
    interface I2 {
        new (private x);
             ~~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
    }
    
    var a: {
        new (public x);
             ~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
    }
    
    var b: {
        new (private x);
             ~~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
    }